--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@angular/service-worker": "8.0.2",
     "@angular/upgrade": "8.0.2",
     "@ismaestro/ngx-scroll-to-first-invalid": "3.0.0",
+    "@ng-bootstrap/ng-bootstrap": "9.0.2",
     "@nguniversal/common": "7.1.1",
     "@nguniversal/express-engine": "7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "v7.1.1",
