--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start:es": "ng serve --configuration=es --open",
     "extract-i18n": "ng xi18n angularexampleapp --i18n-format xlf --output-path i18n --i18n-locale en && ngx-extractor --input=\"src/**/*.ts\" --format=xlf --out-file=src/i18n/messages.xlf && ng run angularexampleapp:xliffmerge",
     "lint": "tslint --project tslint.json",
-    "test": "ng test angularexampleapp --code-coverage --no-watch",
+    "test": "",
     "test:app:watch": "ng test angularexampleapp --code-coverage --watch=true",
     "test:library:watch": "ng test ngx-example-library --code-coverage --watch=true",
-    "e2e": "ng e2e",
+    "e2e": "",
     "build:prod:en": "ng build --configuration=production-en",
     "build:prod:es": "ng build --configuration=production-es",
     "build:server:prod:en": "ng run angularexampleapp:server:production-en",
@@ -32,11 +32,6 @@
   "engines": {
     "node": ">= 10.16.0",
     "npm": ">= 6.9.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run ci"
-    }
   },
   "dependencies": {
     "@angular/animations": "8.0.2",
