--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "private": true,
   "engines": {
-    "node": ">= 10.16.0",
+    "node": "14.x",
     "npm": ">= 6.9.0"
   },
   "dependencies": {
