--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/flex-layout": "8.0.0-beta.26",
     "@angular/forms": "8.0.2",
     "@angular/http": "7.2.15",
+    "@angular/localize": "9.1.13",
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/platform-server": "8.0.2",
@@ -57,6 +58,7 @@
     "@ngx-i18nsupport/tooling": "8.0.2",
     "@ngx-translate/i18n-polyfill": "1.0.0",
     "@sentry/browser": "5.4.0",
+    "bootstrap": "^4.5.0",
     "classlist.js": "1.1.20150312",
     "core-js": "3.1.4",
     "express": "4.17.1",
@@ -66,6 +68,7 @@
     "ng-animate": "0.3.4",
     "ng-lazyload-image": "5.1.2",
     "ngx-cookie": "4.1.2",
+    "ngx-drag-scroll": "9.0.0-beta.4",
     "ngx-logger": "3.3.13",
     "preboot": "7.0.0",
     "rxjs": "6.5.2",
