--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Function for Angular Universal",
   "scripts": {
     "lint": "./node_modules/.bin/tslint -p tsconfig.json",
-    "build": "npm run lint && ./node_modules/.bin/tsc",
+    "build": "npm run lint ",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase experimental:functions:shell",
     "start": "npm run shell",
