--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "core-js": "3.1.4",
     "express": "4.17.1",
     "firebase": "6.2.0",
+    "firebase-functions": "3.13.1",
     "grpc": "1.21.1",
     "helmet": "3.18.0",
     "ng-animate": "0.3.4",
